--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
+  width: 100%;
+  background-color: rgba(238, 130, 238, 0.596);
+  height: 70px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
-
-.App-link {
-  color: #61dafb;
+.btn{
+  text-align: center;
+  margin-top: 25px;
 }
+.btn button{
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  background: green;
+  color: #fff;
+  outline: 0;
+  border: 0;
+  border-radius: 25px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.btn button:hover{
+  transform: scale(1.05);
 }
